...
//                        Spacer(modifier = Modifier.height(20.dp))
//                    }
//                }

                item {
                    Text(
                        text = "ACCOUNT INFO",
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(start = 36.dp),
                        color = textColor,
                        fontSize = 20.sp,
                        fontWeight = FontWeight.Bold
...
                    ProfileItem(
                        value = uiState.fullName,
                        onValueChange = profileViewModel::onFullNameChanged,
                        textColor = textColor,
                        icon = R.drawable.profile_circle_orange,
                        isDarkMode = isDarkMode,
                        title = "NAME",
                        editable = uiState.editable,
                        onExpandedChange = { profileViewModel.toggleDropdownMenu(6) },
                        errorMessage = uiState.errorMessages["fullName"]
                    )
                    HorizontalDivider(
                        color = Color.LightGray,
...
                item {
                    ProfileItem(value = uiState.userName,
                        onValueChange = profileViewModel::onUserNameChanged,
                        textColor = textColor,
                        isDarkMode = isDarkMode,
                        icon = R.drawable.profile_circle_orange,
                        title = "USERNAME",
                        editable = listOf(false, true),
                        onExpandedChange = { profileViewModel.toggleDropdownMenu(6) }
                    )
                    HorizontalDivider(
                        color = Color.LightGray,
                        thickness = 1.dp,
...
                    ProfileItem(
                        value = uiState.email,
                        onValueChange = profileViewModel::onEmailChanged,
                        isDarkMode = isDarkMode,
                        textColor = textColor,
                        icon = R.drawable.profile_email,
                        title = "EMAIL",
                        editable = listOf(false, true),
                        onExpandedChange = { profileViewModel.toggleDropdownMenu(6) },
                    )
                    HorizontalDivider(
                        color = Color.LightGray,
                        thickness = 1.dp,
...
                item {
                    Spacer(modifier = Modifier.height(27.dp))
                }

                item {
                    Text(
                        text = "EDUCATION INFO",
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(start = 36.dp),
                        color = textColor,
                        fontSize = 20.sp,
                        fontWeight = FontWeight.Bold
...
                containerColor = Color(0xFF001627), contentColor = Color.White
            ),
        ) {
            Row(verticalAlignment = Alignment.CenterVertically) {

                Text(
                    text = "Edit Profile",
                    fontSize = 19.sp,
                    color = Color.White,
                    modifier = Modifier.align(Alignment.CenterVertically)
                )

                Spacer(modifier = Modifier.width(11.dp))
...
            shape = RoundedCornerShape(20.dp),
            colors = ButtonDefaults.buttonColors(
                containerColor = Color(0xFF001627), contentColor = Color.White
            ),
        ) {
            Text(
                text = "Logout",
                fontSize = 19.sp,
                color = Color.White,
                modifier = Modifier.align(Alignment.CenterVertically)
            )
        }
    }
...
            colors = ButtonDefaults.buttonColors(
                containerColor = Color.Red,
                contentColor = Color.White
            ),
        ) {
            Text(
                text = "Delete Account",
                fontSize = 19.sp,
                color = Color.White,
                modifier = Modifier.align(Alignment.CenterVertically)
            )
        }
    }
...
        modifier = Modifier
            .fillMaxWidth()
            .padding(vertical = 16.dp)
    ) {
        // Section title
        Text(
            text = "APPEARANCE",
            modifier = Modifier
                .fillMaxWidth()
                .padding(start = 36.dp),
            color = if (isDarkMode) Color.White else Color.Black,
            fontSize = 20.sp,
            fontWeight = FontWeight.Bold
...
